--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@emailjs/browser": "^4.1.0",
     "@splidejs/splide": "^4.1.4",
     "framer-motion": "^10.18.0",
+    "i18next": "^23.8.2",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.5",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-slick": "^0.29.0",
     "react-tilt": "^1.0.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
